src/main/java/com/sasa/kbasParser.java
// Generated from C:/dev/__JavaProjects/blinnafig/src/main\kbas.g4 by ANTLR 4.7
package com.sasa;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class kbasParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DOLLAR=1, PERCENT=2, RETURN=3, PRINT=4, GOTO=5, GOSUB=6, GPS=7, PS=8, 
		RPS=9, IF=10, NEXT=11, THEN=12, REM=13, CHR=14, MID=15, LEFT=16, RIGHT=17, 
		STR=18, LPAREN=19, RPAREN=20, PLUS=21, MINUS=22, TIMES=23, DIV=24, CLEAR=25, 
		NEQ=26, GTE=27, LTE=28, GT=29, LT=30, EQ=31, COMMA=32, NEWLINE=33, LIST=34, 
		RUN=35, END=36, LET=37, FOR=38, TO=39, STEP=40, INPUT=41, SEMICOLON=42, 
		DIM=43, SQR=44, COLON=45, TEXT=46, HGR=47, HGR2=48, LEN=49, CALL=50, ASC=51, 
		HPLOT=52, VPLOT=53, PRNUMBER=54, INNUMBER=55, VTAB=56, HTAB=57, HOME=58, 
		ON=59, PDL=60, PLOT=61, PEEK=62, POKE=63, INTF=64, STOP=65, HIMEM=66, 
		LOMEM=67, FLASH=68, INVERSE=69, NORMAL=70, ONERR=71, SPC=72, FRE=73, POS=74, 
		USR=75, TRACE=76, NOTRACE=77, AND=78, OR=79, DATA=80, WAIT=81, READ=82, 
		XDRAW=83, DRAW=84, AT=85, DEF=86, FN=87, VAL=88, TAB=89, SPEED=90, ROT=91, 
		SCALE=92, COLOR=93, HCOLOR=94, HLIN=95, VLIN=96, SCRN=97, POP=98, SHLOAD=99, 
		SIN=100, COS=101, TAN=102, ATN=103, RND=104, SGN=105, EXP=106, LOG=107, 
		ABS=108, STORE=109, RECALL=110, GET=111, EXPONENT=112, AMPERSAND=113, 
		GR=114, NOT=115, RESTORE=116, SAVE=117, LOAD=118, QUESTION=119, INCLUDE=120, 
		CLS=121, STATUS=122, COMMENT=123, STRINGLITERAL=124, LETTERS=125, NUMBER=126, 
		FLOAT=127, WS=128;
	public static final int
		RULE_prog = 0, RULE_line = 1, RULE_amperoper = 2, RULE_linenumber = 3, 
		RULE_amprstmt = 4, RULE_block = 5, RULE_statement = 6, RULE_vardecl = 7, 
		RULE_printstmt1 = 8, RULE_printlist = 9, RULE_getstmt = 10, RULE_letstmt = 11, 
		RULE_variableassignment = 12, RULE_ifstmt = 13, RULE_forstmt11 = 14, RULE_forstmt1 = 15, 
		RULE_forstmt2 = 16, RULE_nextstmt = 17, RULE_inputstmt = 18, RULE_readstmt = 19, 
		RULE_dimstmt = 20, RULE_gotostmt = 21, RULE_gosubstmt = 22, RULE_gpsstmt = 23, 
		RULE_returnsubstmt = 24, RULE_psstmt = 25, RULE_pokestmt = 26, RULE_callstmt = 27, 
		RULE_hplotstmt = 28, RULE_vplotstmt = 29, RULE_plotstmt = 30, RULE_vtabstmnt = 31, 
		RULE_htabstmnt = 32, RULE_himemstmt = 33, RULE_lomemstmt = 34, RULE_datastmt = 35, 
		RULE_datum = 36, RULE_waitstmt = 37, RULE_xdrawstmt = 38, RULE_drawstmt = 39, 
		RULE_defstmt = 40, RULE_tabstmt = 41, RULE_speedstmt = 42, RULE_rotstmt = 43, 
		RULE_scalestmt = 44, RULE_colorstmt = 45, RULE_hcolorstmt = 46, RULE_hlinstmt = 47, 
		RULE_vlinstmt = 48, RULE_onerrstmt = 49, RULE_prstmt = 50, RULE_instmt = 51, 
		RULE_storestmt = 52, RULE_recallstmt = 53, RULE_liststmt = 54, RULE_popstmt = 55, 
		RULE_amptstmt = 56, RULE_includestmt = 57, RULE_endstmt = 58, RULE_returnstmt = 59, 
		RULE_restorestmt = 60, RULE_number = 61, RULE_stringer = 62, RULE_func = 63, 
		RULE_expression = 64, RULE_var = 65, RULE_varname = 66, RULE_varsuffix = 67, 
		RULE_varlist = 68, RULE_exprlist = 69, RULE_sqrfunc = 70, RULE_chrfunc = 71, 
		RULE_lenfunc = 72, RULE_ascfunc = 73, RULE_midfunc = 74, RULE_pdlfunc = 75, 
		RULE_peekfunc = 76, RULE_intfunc = 77, RULE_spcfunc = 78, RULE_frefunc = 79, 
		RULE_posfunc = 80, RULE_usrfunc = 81, RULE_leftfunc = 82, RULE_rightfunc = 83, 
		RULE_strfunc = 84, RULE_fnfunc = 85, RULE_valfunc = 86, RULE_scrnfunc = 87, 
		RULE_sinfunc = 88, RULE_cosfunc = 89, RULE_tanfunc = 90, RULE_atnfunc = 91, 
		RULE_rndfunc = 92, RULE_sgnfunc = 93, RULE_expfunc = 94, RULE_logfunc = 95, 
		RULE_absfunc = 96, RULE_tabfunc = 97;
	public static final String[] ruleNames = {
		"prog", "line", "amperoper", "linenumber", "amprstmt", "block", "statement", 
		"vardecl", "printstmt1", "printlist", "getstmt", "letstmt", "variableassignment", 
		"ifstmt", "forstmt11", "forstmt1", "forstmt2", "nextstmt", "inputstmt", 
		"readstmt", "dimstmt", "gotostmt", "gosubstmt", "gpsstmt", "returnsubstmt", 
		"psstmt", "pokestmt", "callstmt", "hplotstmt", "vplotstmt", "plotstmt", 
		"vtabstmnt", "htabstmnt", "himemstmt", "lomemstmt", "datastmt", "datum", 
		"waitstmt", "xdrawstmt", "drawstmt", "defstmt", "tabstmt", "speedstmt", 
		"rotstmt", "scalestmt", "colorstmt", "hcolorstmt", "hlinstmt", "vlinstmt", 
		"onerrstmt", "prstmt", "instmt", "storestmt", "recallstmt", "liststmt", 
		"popstmt", "amptstmt", "includestmt", "endstmt", "returnstmt", "restorestmt", 
		"number", "stringer", "func", "expression", "var", "varname", "varsuffix", 
		"varlist", "exprlist", "sqrfunc", "chrfunc", "lenfunc", "ascfunc", "midfunc", 
		"pdlfunc", "peekfunc", "intfunc", "spcfunc", "frefunc", "posfunc", "usrfunc", 
		"leftfunc", "rightfunc", "strfunc", "fnfunc", "valfunc", "scrnfunc", "sinfunc", 
		"cosfunc", "tanfunc", "atnfunc", "rndfunc", "sgnfunc", "expfunc", "logfunc", 
		"absfunc", "tabfunc"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'$'", "'%'", null, null, null, null, null, null, null, null, null, 
		null, null, "'CHR$'", "'MID$'", "'LEFT$'", "'RIGHT$'", "'STR$'", "'('", 
		"')'", "'+'", "'-'", "'*'", "'/'", null, "'<>'", "'>='", "'<='", "'>'", 
		"'<'", "'='", "','", null, null, null, null, null, null, null, null, null, 
		"';'", null, null, "':'", null, null, null, null, null, null, null, null, 
		"'PR#'", "'IN#'", null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "'^'", 
		"'&'", null, null, null, null, null, "'?'", null, null, "'S'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "DOLLAR", "PERCENT", "RETURN", "PRINT", "GOTO", "GOSUB", "GPS", 
		"PS", "RPS", "IF", "NEXT", "THEN", "REM", "CHR", "MID", "LEFT", "RIGHT", 
		"STR", "LPAREN", "RPAREN", "PLUS", "MINUS", "TIMES", "DIV", "CLEAR", "NEQ", 
		"GTE", "LTE", "GT", "LT", "EQ", "COMMA", "NEWLINE", "LIST", "RUN", "END", 
		"LET", "FOR", "TO", "STEP", "INPUT", "SEMICOLON", "DIM", "SQR", "COLON", 
		"TEXT", "HGR", "HGR2", "LEN", "CALL", "ASC", "HPLOT", "VPLOT", "PRNUMBER", 
		"INNUMBER", "VTAB", "HTAB", "HOME", "ON", "PDL", "PLOT", "PEEK", "POKE", 
		"INTF", "STOP", "HIMEM", "LOMEM", "FLASH", "INVERSE", "NORMAL", "ONERR", 
		"SPC", "FRE", "POS", "USR", "TRACE", "NOTRACE", "AND", "OR", "DATA", "WAIT", 
		"READ", "XDRAW", "DRAW", "AT", "DEF", "FN", "VAL", "TAB", "SPEED", "ROT", 
		"SCALE", "COLOR", "HCOLOR", "HLIN", "VLIN", "SCRN", "POP", "SHLOAD", "SIN", 
		"COS", "TAN", "ATN", "RND", "SGN", "EXP", "LOG", "ABS", "STORE", "RECALL", 
		"GET", "EXPONENT", "AMPERSAND", "GR", "NOT", "RESTORE", "SAVE", "LOAD", 
		"QUESTION", "INCLUDE", "CLS", "STATUS", "COMMENT", "STRINGLITERAL", "LETTERS", 
		"NUMBER", "FLOAT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "kbas.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public kbasParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(kbasParser.EOF, 0); }
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kbasListener) ((kbasListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kbasListener) ((kbasListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof kbasVisitor) return ((kbasVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(196);
				line();
				}
				}
				setState(199); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RETURN) | (1L << PRINT) | (1L << GOTO) | (1L << GOSUB) | (1L << GPS) | (1L << PS) | (1L << RPS) | (1L << IF) | (1L << NEXT) | (1L << REM) | (1L << CLEAR) | (1L << LIST) | (1L << RUN) | (1L << END) | (1L << LET) | (1L << FOR) | (1L << INPUT) | (1L << DIM) | (1L << TEXT) | (1L << HGR) | (1L << HGR2) | (1L << CALL) | (1L << HPLOT) | (1L << VPLOT) | (1L << PRNUMBER) | (1L << INNUMBER) | (1L << VTAB) | (1L << HTAB) | (1L << HOME) | (1L << PLOT) | (1L << POKE))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (STOP - 65)) | (1L << (HIMEM - 65)) | (1L << (LOMEM - 65)) | (1L << (FLASH - 65)) | (1L << (INVERSE - 65)) | (1L << (NORMAL - 65)) | (1L << (ONERR - 65)) | (1L << (TRACE - 65)) | (1L << (NOTRACE - 65)) | (1L << (DATA - 65)) | (1L << (WAIT - 65)) | (1L << (READ - 65)) | (1L << (XDRAW - 65)) | (1L << (DRAW - 65)) | (1L << (DEF - 65)) | (1L << (TAB - 65)) | (1L << (SPEED - 65)) | (1L << (ROT - 65)) | (1L << (SCALE - 65)) | (1L << (COLOR - 65)) | (1L << (HCOLOR - 65)) | (1L << (HLIN - 65)) | (1L << (VLIN - 65)) | (1L << (POP - 65)) | (1L << (SHLOAD - 65)) | (1L << (STORE - 65)) | (1L << (RECALL - 65)) | (1L << (GET - 65)) | (1L << (AMPERSAND - 65)) | (1L << (GR - 65)) | (1L << (RESTORE - 65)) | (1L << (SAVE - 65)) | (1L << (LOAD - 65)) | (1L << (QUESTION - 65)) | (1L << (INCLUDE - 65)) | (1L << (CLS - 65)) | (1L << (STATUS - 65)) | (1L << (COMMENT - 65)) | (1L << (LETTERS - 65)) | (1L << (NUMBER - 65)))) != 0) );
			setState(201);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public LinenumberContext linenumber() {
			return getRuleContext(LinenumberContext.class,0);
		}
		public TerminalNode STATUS() { return getToken(kbasParser.STATUS, 0); }
		public TerminalNode COMMENT() { return getToken(kbasParser.COMMENT, 0); }
		public TerminalNode REM() { return getToken(kbasParser.REM, 0); }
		public List<AmprstmtContext> amprstmt() {
			return getRuleContexts(AmprstmtContext.class);
		}
		public AmprstmtContext amprstmt(int i) {
			return getRuleContext(AmprstmtContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(kbasParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(kbasParser.COMMA, i);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kbasListener) ((kbasListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kbasListener) ((kbasListener)listener).exitLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof kbasVisitor) return ((kbasVisitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(205);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMBER:
				{
				setState(203);
				linenumber();
				}
				break;
			case STATUS:
				{
				setState(204);
				match(STATUS);
				}
				break;
			case RETURN:
			case PRINT:
			case GOTO:
			case GOSUB:
			case GPS:
			case PS:
			case RPS:
			case IF:
			case NEXT:
			case REM:
			case CLEAR:
			case LIST:
			case RUN:
			case END:
			case LET:
			case FOR:
			case INPUT:
			case DIM:
			case TEXT:
			case HGR:
			case HGR2:
			case CALL:
			case HPLOT:
			case VPLOT:
			case PRNUMBER:
			case INNUMBER:
			case VTAB:
			case HTAB:
			case HOME:
			case PLOT:
			case POKE:
			case STOP:
			case HIMEM:
			case LOMEM:
			case FLASH:
			case INVERSE:
			case NORMAL:
			case ONERR:
			case TRACE:
			case NOTRACE:
			case DATA:
			case WAIT:
			case READ:
			case XDRAW:
			case DRAW:
			case DEF:
			case TAB:
			case SPEED:
			case ROT:
			case SCALE:
			case COLOR:
			case HCOLOR:
			case HLIN:
			case VLIN:
			case POP:
			case SHLOAD:
			case STORE:
			case RECALL:
			case GET:
			case AMPERSAND:
			case GR:
			case RESTORE:
			case SAVE:
			case LOAD:
			case QUESTION:
			case INCLUDE:
			case CLS:
			case COMMENT:
			case LETTERS:
				break;
			default:
				break;
			}
			setState(218);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				{
				setState(207);
				amprstmt();
				setState(214);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(208);
					match(COMMA);
					setState(210);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						setState(209);
						amprstmt();
						}
						break;
					}
					}
					}
					setState(216);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			case 2:
				{
				setState(217);
				_la = _input.LA(1);
				if ( !(_la==REM || _la==COMMENT) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AmperoperContext extends ParserRuleContext {
		public TerminalNode AMPERSAND() { return getToken(kbasParser.AMPERSAND, 0); }
		public AmperoperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_amperoper; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof kbasListener) ((kbasListener)listener).enterAmperoper(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof kbasListener) ((kbasListener)listener).exitAmperoper(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof kbasVisitor) return ((kbasVisitor<? extends T>)visitor).visitAmperoper(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AmperoperContext amperoper() throws RecognitionException {
		AmperoperContext _localctx = new AmperoperContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_amperoper);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(220);
			match(AMPERSAND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
